2006-01-11  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/rlist.cpp :
	* lib/rlist.h :

	  - The list now takes a rel object for adding.

	* lib/rel.cpp :
	* lib/rel.h :

	  - m_rs was erroneously defined as an unsigned char which resulted
	    in overflows. Now defined as unsigned int.

	  - Removed unused add() function.

	  - Added a join() which will set m_rs to the union of the m_rs's of
	    this rel and the given one.

	  - The init() function will now normalise a relation first, e.g. the
	    first interval is always alphabetically less than the second
	    interval.

	* lib/polbase.cpp :

	  - Fixed a few minor mistakes.

2006-01-10  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :
	* lib/polbash.h :

	  - Added temporal rules.

	* lib/tnet.cpp :
	* lib/tnet.h :

	  - Added a variation of get_rel() that takes indices instead of
	    identifiers"

2006-01-09  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* main/policy.y :

	  - For now, just hardcode an empty rlist when adding constraints and
	    updates.

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - The {compute,evaluate}_{constraint,update}() functions will now
	    check if the grounded identifiers satisfy the temporal constraints
	    in rlist before evaluating/generating rules.

	  - add_consttab() and and_updatetab() now contains the extra rlist
	    parameter.

	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/updatetab.cpp :
	* lib/updatetab.h :

	  - Added an rlist to these classes. The rlist contains a list of
	    temporal constraints.

	* lib/rlist.cpp :
	* lib/rlist.h :

	  - Added is_allnonground() to check whether all rels are non-ground.

	  - Added copy(), vcopy(),vreplace() and vvarlist().

	* lib/rel.cpp :
	* lib/rel.h :

	  - Added vcopy(),vreplace() and vvarlist().

	* lib/updatetab.cpp :
	* lib/updatetab.h :

	  - Removed unused replace() function.

2006-01-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :