@@ -24,9 +24,14 @@
 #include <cstring>
 #include <cstdio>
 
+#include <tribe/rel.h>
+
 #include <vlad/vlad.h>
 #include <vlad/mem.h>
 #include <vlad/identifier.h>
+#include <vlad/fact.h>
+#include <vlad/expression.h>
+#include <vlad/rel.h>
 #include <vlad/polbase.h>
 
 /* vars defined from the scanner */
@@ -66,16 +71,22 @@ int policyparse();
 
 %union {
   unsigned int terminal;
+  unsigned int number;
   char identifier[VLAD_MAXLEN_IDENT];
+  unsigned int endpoints[2];
   vlad_fact *fct;
   vlad_expression *exp;
+  vlad_rel *rel;
   vlad_varlist *vlist;
+  vlad_rlist *rlist;
 }
 
 %token <terminal> VLAD_SYM_EOF
 %token <terminal> VLAD_SYM_ERROR
 %token <terminal> VLAD_SYM_OPEN_PARENT
 %token <terminal> VLAD_SYM_CLOSE_PARENT
+%token <terminal> VLAD_SYM_OPEN_BRACKET
+%token <terminal> VLAD_SYM_CLOSE_BRACKET
 %token <terminal> VLAD_SYM_COMMA
 %token <terminal> VLAD_SYM_SEMICOLON
 %token <terminal> VLAD_SYM_AND
@@ -83,7 +94,10 @@ int policyparse();
 %token <terminal> VLAD_SYM_HOLDS
 %token <terminal> VLAD_SYM_MEMB
 %token <terminal> VLAD_SYM_SUBST
+%token <terminal> VLAD_SYM_ENTITY
+%token <terminal> VLAD_SYM_INTERVAL
 %token <terminal> VLAD_SYM_INITIALLY
+%token <terminal> VLAD_SYM_RELATION
 %token <terminal> VLAD_SYM_IMPLIED
 %token <terminal> VLAD_SYM_BY
 %token <terminal> VLAD_SYM_WITH
@@ -91,15 +105,23 @@ int policyparse();
 %token <terminal> VLAD_SYM_ALWAYS
 %token <terminal> VLAD_SYM_CAUSES
 %token <terminal> VLAD_SYM_IF
-%token <terminal> VLAD_SYM_AFTER
+%token <terminal> VLAD_SYM_WHERE
 %token <terminal> VLAD_SYM_SUBSINTYPE
 %token <terminal> VLAD_SYM_OBJSINTYPE
 %token <terminal> VLAD_SYM_ACCSINTYPE
 %token <terminal> VLAD_SYM_SUBGRPTYPE
 %token <terminal> VLAD_SYM_OBJGRPTYPE
 %token <terminal> VLAD_SYM_ACCGRPTYPE
-%token <terminal> VLAD_SYM_ENTITY
+%token <terminal> VLAD_SYM_EQL
+%token <terminal> VLAD_SYM_BEF
+%token <terminal> VLAD_SYM_DUR
+%token <terminal> VLAD_SYM_OVR
+%token <terminal> VLAD_SYM_MET
+%token <terminal> VLAD_SYM_STA
+%token <terminal> VLAD_SYM_FIN
+%token <number> VLAD_SYM_NUMBER
 %token <identifier> VLAD_SYM_IDENTIFIER
+%type <endpoints> interval_endpoint_decl
 %type <fct> fact
 %type <fct> boolean_fact
 %type <fct> holds_fact
@@ -109,6 +131,16 @@ int policyparse();
 %type <exp> implied_clause
 %type <exp> with_clause
 %type <exp> if_clause
+%type <rel> relation_atom
+%type <rel> rel_eql_atom
+%type <rel> rel_bef_atom
+%type <rel> rel_dur_atom
+%type <rel> rel_ovr_atom
+%type <rel> rel_met_atom
+%type <rel> rel_sta_atom
+%type <rel> rel_fin_atom
+%type <rlist> relation_list
+%type <rlist> where_clause
 %type <vlist> update_var_list
 %type <vlist> update_var_def
 
@@ -126,7 +158,7 @@ init :
   ;
 
 body :
-  entity_section initial_section constraint_section update_section {
+  identifier_section initial_section relation_section constraint_section update_section {
     int retval;
     /* after the body, we must close the polbase */
     if ((retval = pbase->close_polbase()) != VLAD_OK) {
@@ -142,14 +174,8 @@ destroy :
   }
   ;
 
-entity_section : {
+identifier_section : {
     int retval;
-    /* XXX: for now, add a "default" interval */
-    if ((retval = pbase->add_interval("today")) != VLAD_OK) {
-      errorcode = retval;
-      policyerror("unable to add interval \"today\"");
-      return retval;
-    }
     /* after the entity section, we must close the symbol table */
     if ((retval = pbase->close_symtab()) != VLAD_OK) {
       errorcode = retval;
@@ -157,14 +183,8 @@ entity_section : {
       return retval;
     }
   }
-  | entity_stmt_list {
+  | identifier_stmt_list {
     int retval;
-    /* XXX: for now, add a "default" interval */
-    if ((retval = pbase->add_interval("today")) != VLAD_OK) {
-      errorcode = retval;
-      policyerror("unable to add interval \"today\"");
-      return retval;
-    }
     /* after the ident section, we must close the symbol table */
     if ((retval = pbase->close_symtab()) != VLAD_OK) {
       errorcode = retval;
@@ -175,20 +195,25 @@ entity_section : {
   ;
 
 initial_section : {
+  }
+  | initial_stmt_list {
+  }
+  ;
+
+relation_section :
+  relation_stmt_list {
     int retval;
-    /* XXX: for now, we close the rel here too */
     if ((retval = pbase->close_rel()) != VLAD_OK) {
       errorcode = retval;
-      policyerror("unable to close rel");
+      policyerror("unable to close relation table");
       return retval;
     }
   }
-  | initial_stmt_list {
+  | {
     int retval;
-    /* XXX: for now, we close the rel here too */
     if ((retval = pbase->close_rel()) != VLAD_OK) {
       errorcode = retval;
-      policyerror("unable to close rel");
+      policyerror("unable to close relation table");
       return retval;
     }
   }
@@ -206,14 +231,19 @@ update_section : {
   }
   ;
 
-entity_stmt_list :
-  entity_stmt
-  | entity_stmt_list entity_stmt
+identifier_stmt_list :
+  identifier_stmt
+  | identifier_stmt_list identifier_stmt
   ;
 
 initial_stmt_list :
   initial_stmt
   | initial_stmt_list initial_stmt
+  ;
+
+relation_stmt_list :
+  relation_stmt
+  | relation_stmt_list relation_stmt
   ;
 
 constraint_stmt_list :
@@ -226,8 +256,10 @@ update_stmt_list :
   | update_stmt_list update_stmt
   ;
 
-entity_stmt :
+identifier_stmt :
   VLAD_SYM_ENTITY entity_declaration VLAD_SYM_SEMICOLON {
+  }
+  | VLAD_SYM_INTERVAL interval_declaration VLAD_SYM_SEMICOLON {
   }
   ;
 
@@ -238,6 +270,13 @@ entity_declaration :
   | sub_grp_entity_decl
   | obj_grp_entity_decl
   | acc_grp_entity_decl
+  ;
+
+interval_declaration :
+  interval_decl {
+  }
+  | interval_declaration VLAD_SYM_COMMA interval_decl {
+  }
   ;
 
 sub_sin_entity_decl :
@@ -348,6 +387,26 @@ acc_grp_entity_list :
   }
   ;
 
+interval_decl :
+  VLAD_SYM_IDENTIFIER interval_endpoint_decl {
+    int retval;
+    if ((retval = pbase->add_interval($1, $2[0], $2[1])) != VLAD_OK)
+      return retval;
+  }
+  | VLAD_SYM_IDENTIFIER {
+    int retval;
+    if ((retval = pbase->add_interval($1)) != VLAD_OK)
+      return retval;
+  }
+  ;
+
+interval_endpoint_decl :
+  VLAD_SYM_OPEN_BRACKET VLAD_SYM_NUMBER VLAD_SYM_COMMA VLAD_SYM_NUMBER VLAD_SYM_CLOSE_BRACKET {
+    $$[0] = $2;
+    $$[1] = $4;
+  }
+  ;
+
 initial_stmt :
   VLAD_SYM_INITIALLY expression VLAD_SYM_SEMICOLON {
     int retval;
@@ -387,15 +446,231 @@ initial_stmt :
   }
   ;
 
-constraint_stmt : VLAD_SYM_ALWAYS expression implied_clause with_clause VLAD_SYM_SEMICOLON {
+relation_stmt :
+  VLAD_SYM_RELATION relation_list VLAD_SYM_SEMICOLON {
+    int retval;
+
+    if ((retval = pbase->add_tc($2)) != VLAD_OK) {
+      errorcode = retval;
+      policyerror("could not add relation list into the policy base");
+      return errorcode;
+    }
+
+    VLAD_MEM_DELETE($2);
+  }
+  ;
+
+relation_list :
+  relation_atom {
+    int retval;
+
+    if (($$ = VLAD_MEM_NEW(vlad_rlist())) == NULL) {
+      errorcode = VLAD_MALLOCFAILED;
+      policyerror("memory overflow");
+      return errorcode;
+    }
+
+    if ((retval = $$->add($1)) != VLAD_OK) {
+      errorcode = retval;
+      policyerror("could not add relation into list");
+      return errorcode;
+    }
+
+    VLAD_MEM_DELETE($1);
+  }
+  | relation_list VLAD_SYM_COMMA relation_atom {
+    int retval;
+
+    if ((retval = $$->add($3)) != VLAD_OK) {
+      errorcode = retval;
+      policyerror("could not add relation into list");
+      return errorcode;
+    }
+
+    VLAD_MEM_DELETE($3);
+  }
+  ;
+
+relation_atom :
+  rel_eql_atom {
+    $$ = $1;
+  }
+  | rel_bef_atom {
+    $$ = $1;
+  }
+  | rel_dur_atom {
+    $$ = $1;
+  }
+  | rel_ovr_atom {
+    $$ = $1;
+  }
+  | rel_met_atom {
+    $$ = $1;
+  }
+  | rel_sta_atom {
+    $$ = $1;
+  }
+  | rel_fin_atom {
+    $$ = $1;
+  }
+  ;
+
+rel_eql_atom :
+  VLAD_SYM_EQL VLAD_SYM_OPEN_PARENT VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_CLOSE_PARENT {
+    int retval;
+    unsigned int rs;
+
+    TBE_REL_SET_CLEAR(rs);
+    TBE_REL_SET_ADD(rs, TBE_REL_EQL);
+
+    if (($$ = VLAD_MEM_NEW(vlad_rel())) == NULL) {
+      errorcode = VLAD_MALLOCFAILED;
+      policyerror("memory overflow");
+      return errorcode;
+    }
+    if ((retval = $$->init($3, $5, rs)) != VLAD_OK) {
+      errorcode = retval;
+      policyerror("could not initialise relation");
+      return errorcode;
+    }
+  }
+  ;
+
+rel_bef_atom :
+  VLAD_SYM_BEF VLAD_SYM_OPEN_PARENT VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_CLOSE_PARENT {
+    int retval;
+    unsigned int rs;
+
+    TBE_REL_SET_CLEAR(rs);
+    TBE_REL_SET_ADD(rs, TBE_REL_BEF);
+
+    if (($$ = VLAD_MEM_NEW(vlad_rel())) == NULL) {
+      errorcode = VLAD_MALLOCFAILED;
+      policyerror("memory overflow");
+      return errorcode;
+    }
+    if ((retval = $$->init($3, $5, rs)) != VLAD_OK) {
+      errorcode = retval;
+      policyerror("could not initialise relation");
+      return errorcode;
+    }
+  }
+  ;
+
+rel_dur_atom :
+  VLAD_SYM_DUR VLAD_SYM_OPEN_PARENT VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_CLOSE_PARENT {
+    int retval;
+    unsigned int rs;
+
+    TBE_REL_SET_CLEAR(rs);
+    TBE_REL_SET_ADD(rs, TBE_REL_DUR);
+
+    if (($$ = VLAD_MEM_NEW(vlad_rel())) == NULL) {
+      errorcode = VLAD_MALLOCFAILED;
+      policyerror("memory overflow");
+      return errorcode;
+    }
+    if ((retval = $$->init($3, $5, rs)) != VLAD_OK) {
+      errorcode = retval;
+      policyerror("could not initialise relation");
+      return errorcode;
+    }
+  }
+  ;
+
+rel_ovr_atom :
+  VLAD_SYM_OVR VLAD_SYM_OPEN_PARENT VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_CLOSE_PARENT {
+    int retval;
+    unsigned int rs;
+
+    TBE_REL_SET_CLEAR(rs);
+    TBE_REL_SET_ADD(rs, TBE_REL_OVR);
+
+    if (($$ = VLAD_MEM_NEW(vlad_rel())) == NULL) {
+      errorcode = VLAD_MALLOCFAILED;
+      policyerror("memory overflow");
+      return errorcode;
+    }
+    if ((retval = $$->init($3, $5, rs)) != VLAD_OK) {
+      errorcode = retval;
+      policyerror("could not initialise relation");
+      return errorcode;
+    }
+  }
+  ;
+
+rel_met_atom :
+  VLAD_SYM_MET VLAD_SYM_OPEN_PARENT VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_CLOSE_PARENT {
+    int retval;
+    unsigned int rs;
+
+    TBE_REL_SET_CLEAR(rs);
+    TBE_REL_SET_ADD(rs, TBE_REL_MET);
+
+    if (($$ = VLAD_MEM_NEW(vlad_rel())) == NULL) {
+      errorcode = VLAD_MALLOCFAILED;
+      policyerror("memory overflow");
+      return errorcode;
+    }
+    if ((retval = $$->init($3, $5, rs)) != VLAD_OK) {
+      errorcode = retval;
+      policyerror("could not initialise relation");
+      return errorcode;
+    }
+  }
+  ;
+
+rel_sta_atom :
+  VLAD_SYM_STA VLAD_SYM_OPEN_PARENT VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_CLOSE_PARENT {
+    int retval;
+    unsigned int rs;
+
+    TBE_REL_SET_CLEAR(rs);
+    TBE_REL_SET_ADD(rs, TBE_REL_STA);
+
+    if (($$ = VLAD_MEM_NEW(vlad_rel())) == NULL) {
+      errorcode = VLAD_MALLOCFAILED;
+      policyerror("memory overflow");
+      return errorcode;
+    }
+    if ((retval = $$->init($3, $5, rs)) != VLAD_OK) {
+      errorcode = retval;
+      policyerror("could not initialise relation");
+      return errorcode;
+    }
+  }
+  ;
+
+rel_fin_atom :
+  VLAD_SYM_FIN VLAD_SYM_OPEN_PARENT VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_CLOSE_PARENT {
+    int retval;
+    unsigned int rs;
+
+    TBE_REL_SET_CLEAR(rs);
+    TBE_REL_SET_ADD(rs, TBE_REL_FIN);
+
+    if (($$ = VLAD_MEM_NEW(vlad_rel())) == NULL) {
+      errorcode = VLAD_MALLOCFAILED;
+      policyerror("memory overflow");
+      return errorcode;
+    }
+    if ((retval = $$->init($3, $5, rs)) != VLAD_OK) {
+      errorcode = retval;
+      policyerror("could not initialise relation");
+      return errorcode;
+    }
+  }
+  ;
+
+constraint_stmt : VLAD_SYM_ALWAYS expression implied_clause with_clause where_clause VLAD_SYM_SEMICOLON {
     int retval;
 #ifdef VLAD_DEBUG
     char e[VLAD_MAXLEN_STR];
     char c[VLAD_MAXLEN_STR];
     char n[VLAD_MAXLEN_STR];
 #endif
-    /* XXX */
-    if ((retval = pbase->add_consttab($2, $3, $4, NULL)) != VLAD_OK) {
+
+    if ((retval = pbase->add_consttab($2, $3, $4, $5)) != VLAD_OK) {
       errorcode = retval;
       policyerror("could not add constraint into constraint table");
       return retval;
@@ -443,8 +718,16 @@ with_clause : {
   }
   ;
 
+where_clause : {
+    $$ = NULL;
+  }
+  | VLAD_SYM_WHERE relation_list {
+    $$ = $2;
+  }
+  ;
+
 update_stmt :
-  VLAD_SYM_IDENTIFIER update_var_def VLAD_SYM_CAUSES expression if_clause VLAD_SYM_SEMICOLON {
+  VLAD_SYM_IDENTIFIER update_var_def VLAD_SYM_CAUSES expression if_clause where_clause VLAD_SYM_SEMICOLON {
     int retval;
 #ifdef VLAD_DEBUG
     char v[VLAD_MAXLEN_STR];
@@ -452,8 +735,7 @@ update_stmt :
     char po[VLAD_MAXLEN_STR];
 #endif
 
-    /* XXX */
-    if ((retval = pbase->add_updatetab($1, $2, $5, $4, NULL)) != VLAD_OK) {
+    if ((retval = pbase->add_updatetab($1, $2, $5, $4, $6)) != VLAD_OK) {
       errorcode = retval;
       policyerror("could not add update into update table");
       return retval;
@@ -605,7 +887,7 @@ fact :
   ;
 
 holds_fact :
-  VLAD_SYM_HOLDS VLAD_SYM_OPEN_PARENT VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_CLOSE_PARENT {
+  VLAD_SYM_HOLDS VLAD_SYM_OPEN_PARENT VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_CLOSE_PARENT {
     int retval;
 
     if (($$ = VLAD_MEM_NEW(vlad_fact())) == NULL) {
@@ -614,8 +896,7 @@ holds_fact :
       return VLAD_MALLOCFAILED;
     }
 
-    /* XXX: use "default" interval */
-    if ((retval = $$->init_holds($3, $5, $7, "today", true)) != VLAD_OK) {
+    if ((retval = $$->init_holds($3, $5, $7, $9, true)) != VLAD_OK) {
       errorcode = retval;
       policyerror("could not initialise holds fact");
       return retval;
@@ -624,7 +905,7 @@ holds_fact :
   ;
 
 subst_fact :
-  VLAD_SYM_SUBST VLAD_SYM_OPEN_PARENT VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_CLOSE_PARENT {
+  VLAD_SYM_SUBST VLAD_SYM_OPEN_PARENT VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_CLOSE_PARENT {
     int retval;
 
     if (($$ = VLAD_MEM_NEW(vlad_fact())) == NULL) {
@@ -633,8 +914,7 @@ subst_fact :
       return VLAD_MALLOCFAILED;
     }
 
-    /* XXX: use "default" interval */
-    if ((retval = $$->init_subset($3, $5, "today", true)) != VLAD_OK) {
+    if ((retval = $$->init_subset($3, $5, $7, true)) != VLAD_OK) {
       errorcode = retval;
       policyerror("could not initialise subset fact");
       return retval;
@@ -643,7 +923,7 @@ subst_fact :
   ;
 
 memb_fact :
-  VLAD_SYM_MEMB VLAD_SYM_OPEN_PARENT VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_CLOSE_PARENT {
+  VLAD_SYM_MEMB VLAD_SYM_OPEN_PARENT VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_COMMA VLAD_SYM_IDENTIFIER VLAD_SYM_CLOSE_PARENT {
     int retval;
 
     if (($$ = VLAD_MEM_NEW(vlad_fact())) == NULL) {
@@ -652,8 +932,7 @@ memb_fact :
       return VLAD_MALLOCFAILED;
     }
 
-    /* XXX: use "default" interval */
-    if ((retval = $$->init_member($3, $5, "today", true)) != VLAD_OK) {
+    if ((retval = $$->init_member($3, $5, $7, true)) != VLAD_OK) {
       errorcode = retval;
       policyerror("could not initialise member fact");
       return retval;
